# vem

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  pr-auto-approve.yaml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  api.md  architecture.md  building.md  commands.md  configuration.md  contributing.md  environment-structure.md  faq.md  installation.md  introduction.md  quick-start.md  testing.md  troubleshooting.md
docs/src/commands/: create.md  ctags.md
etc/.vem/envs/ai-development/: init.lua  vem.toml
etc/.vem/envs/basic-vim/: vem.toml  vimrc
etc/.vem/envs/developer-vim/: vem.toml  vimrc
etc/.vem/envs/modern-nvim/: init.lua  vem.toml
etc/.vem/envs/modern-nvim/lua/plugins/: init.lua
etc/.vem/global/: README.md
etc/.vem/global/vim/: common-settings.vim
scripts/: main.sh
src/: base.rs  main.rs  mod.rs
src/cnf/: application.rs  mod.rs
src/ctl/: base.rs  cli.rs  environment.rs
src/ent/: environment.rs  error.rs  mod.rs
src/ent/model/: ai.rs  coc.rs  ctags.rs  environment.rs  lsp.rs  neovim.rs  package_manager.rs  theme.rs  vimscript.rs
src/ent/request/: environment.rs
src/ent/response/: environment.rs
src/rep/: ai.rs  coc.rs  ctags.rs  environment.rs  lsp.rs  mod.rs  neovim.rs  package_manager.rs  theme.rs  vimscript.rs
src/usc/: environment.rs  mod.rs
src/util/: clone.rs  debug.rs  deserialize.rs  eq.rs  error.rs  mcode.rs  serialize.rs
target-ra/: .rustc_info.json
